--- a/index.html
+++ b/index.html
@@ -1,117 +1,265 @@
 
 <!DOCTYPE html>
-<html lang="en" class="scrollbar light">
-
+<!-- Created BY FARHAN-MUH-TASIM -->
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>FARHAN-MUH-TASIM | gtajisan</title>
-    <base href="/">
-    <meta property="og:title" content="FARHAN-MUH-TASIM | anbuinfosec Apis">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://avatars.githubusercontent.com/u/135030867?v=4">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="anbuinfosec Apis is a website that provides APIs for developers.">
-    <link rel="icon" href="https://avatars.githubusercontent.com/u/135030867?v=4" type="image/x-icon">
-    <link rel="stylesheet" id="prims-css" href="public/css/prism.css">
-    <link rel="stylesheet" href="public/css/phoenix.css">
-    <link rel="stylesheet" href="public/css/custom.css">
-    <link rel="stylesheet" href="public/css/footer.css">
-    <link rel="stylesheet" href="ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <script src="public/js/prism.js"></script>
-    <script src="public/js/9e0725c1aa.js"></script>
-    <script src="public/js/jquery-3.6.3.min.js"></script>
-    <script src="public/js/modal.js"></script>
-    <script src="public/js/toast.js"></script>
-    <script src="public/js/clipboard.js"></script>
-    <script src="/public/js/ajaxposts.js"></script>
-    <script src="npm/sweetalert2-11.js"></script>
-    <script src="npm/bootstrap-5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="ajax/libs/list_js/2.3.1/list.min.js"></script>
+    <title>Personal Portfolio Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+
 </head>
-
 <body>
-    <div class="loader">
-        <div class="loader__figure">
-            <img src="public/images/loader.svg" alt="loader" style="max-width: 200px;">
-        </div>
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
     </div>
-
-<main class="main" id="top">
-    <div class="container-fluid px-0" data-layout="container">
-
-        <nav class="navbar navbar-top navbar-expand-md" id="navbarTop">
-    <div class="navbar-logo">
-        <button class="btn navbar-toggler navbar-toggler-humburger-icon hover-bg-transparent" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTopCollapse" aria-controls="navbarTopCollapse" aria-expanded="false" aria-label="Toggle Navigation">
-            <span class="navbar-toggle-icon"><span class="toggle-line"></span></span>
-        </button>
-        <a class="navbar-brand mr-1 mr-sm-3" href="/">
-            <div style="font-family: Conthrax;" class="h4 mb-0 text-uppercase ms-2 d-flex align-items-left">ANBUINFOSEC</div>
-        </a>
-    </div>
-    <div class="collapse navbar-collapse navbar-top-collapse order-1 order-md-0 justify-content-end" id="navbarTopCollapse">
-        <ul class="navbar-nav" data-top-nav-dropdowns="data-top-nav-dropdowns">
-        <li class="nav-item">
-                <a href="tools" class="nav-link px-3"><i class="fas fa-tools"></i> Tools</a>
-            </li>
-            <li class="nav-item">
-                <a href="docs" class="nav-link px-3"><i class="fas fa-book"></i> Docs</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a href="contacts" class="nav-link px-3"><i class="fas fa-phone-alt"></i> Contacts</a>
-            </li>
-                            <li class="nav-item dropdown">
-                    <a href="signin" class="nav-link px-3"><i class="fas fa-sign-in-alt"></i> Login</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a href="signup" class="nav-link px-3"><i class="fas fa-user-plus"></i> Register</a>
-                </li>
-            
-            <li class="nav-item" id="switch-theme">
-                <a class="nav-link px-3" id="switch-mode" role="button">
-                    <i class="fas fa-moon" id="switch-mode-icon"></i>
-                    <span class="d-md-none">Switch to <span id="switch-mode-text">dark</span> Mode</span>
-                </a>
-            </li>
-        </ul>
-    </div>
-    <ul class="navbar-nav navbar-nav-icons flex-row">
+    <nav class="navbar">
+        <div class="max-width">
+            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+            <ul class="menu">
+                <li><a href="#home" class="menu-btn">Home</a></li>
+                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#services" class="menu-btn">Services</a></li>
+                <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
-</nav>
-        <script src="/public/js/header.js"></script>
-        <div class="content">
-            <div id="toast"></div>
+            <div class="menu-btn">
+                <i class="fas fa-bars"></i>
+            </div>
+        </div>
+    </nav>
 
-            <div class="card mb-3 shadow-lg">
-                <div class="card-header">
-						<h4 class="card-title mb-0 text-center">Mohammad Alamin</h4>
-					</div>
-                <div class="card-body text-center">
-                    <img src="https://avatars.githubusercontent.com/u/135030867?v=4" alt="Profile Picture" class="rounded-circle mb-4 rainbow-profile-pic" style="width: 150px; height: 150px;">
-                    <h3 class="card-title mb-2">Mohammad Alamin</h3>
-                    <p class="text-muted">Hey there! I'm Mohammad Alamin, a 17 Y/O backend developer from Rangpur. Currently studying Computer Science & Technology at Barisal Polytechnic Institute. Join me in exploring and creating new things in the digital world.</p>
+    <!-- home section start -->
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Hello, Our name is</div>
+                <div class="text-2">FARHAN-MUH-TASIM</div>
+                <div class="text-3">And We Are a <span class="typing"></span></div>
+                <a href="https://m.me/j/AbZoOyGXJvl_zUrC/">Our Facebook Group</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- about section start -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About We</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="images/profile-1.jpeg" alt="">
+                </div>
+                <div class="column right">
+                    <div class="text">We Are FARHAN-MUH-TASIMand We Are a <span class="typing-2"></span></div>
+                    <p>The company itself is a very successful company. As if pleasures will come and pains will be received, it is a laborious pleasure unless the chosen one. I will explain here that we do not blame others for the flight of any pains. I will explain to him whence we can achieve the truth itself through hatred, may it please him, that he who wishes to find out from trouble will be trained by the flattery of all the blessed. This pain will be accepted by reason, which the guilt of repudiating these pleasures will not.</p>
+                    <a href="#">FARHAN-MUH-TASIM</a>
                 </div>
             </div>
         </div>
-    </div>
-</main>
+    </section>
 
+    <!-- services section start -->
+    <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">Our services</h2>
+            <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">Web Design</div>
+                        <p>The company itself is a very successful company. A thing because they are, as if for that.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-chart-line"></i>
+                        <div class="text">Advertising</div>
+                        <p>The company itself is a very successful company. A thing because they are, as if for that.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Apps Design</div>
+                        <p>The company itself is a very successful company. A thing because they are, as if for that.</p>
+                    </div>
+                </div>
+               </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- skills section start -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">Our skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">Our creative skills & experiences.</div>
+                    <p>The company itself is a very successful company. It is a mistake to refuse the most dignified, and indeed it hinders the just and the gentle, whom the least seek to follow. Is any one of their minds hardened by the eagerness of refusing to be praised, and the chosen one, how else should he seek? As if he were indeed here. I will explain here less than what was born to the chosen one.</p>
+                    <a href="#">Read more</a>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>Python</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line css"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>PHP</span>
+                            <span>50%</span>
+                        </div>
+                        <div class="line php"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>MySQL</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line mysql"></div>
+                    </div>
+                    <div class="info">
+                            <span>HTML</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- teams section start -->
+    <section class="teams" id="teams">
+        <div class="max-width">
+            <h2 class="title">Our teams</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="images/profile-2.jpeg" alt="">
+                        <div class="text">FARHAN-MUH-TASIM</div>
+                        <p>The company itself is a very successful company.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/profile-4.jpg" alt="">
+                        <div class="text">Anniemouse</div>
+                        <p>The company itself is a very successful company.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/profile-3.jpeg" alt="">
+                        <div class="text">Tahosinur Rahman x FARHAN-MUH-TASIM</div>
+                        <p>The company itself is a very successful company.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/profile-5.jpg" alt="">
+                        <div class="text">Anniemouse</div>
+                        <p>The company itself is a very successful company.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/profile-6.jpg" alt="">
+                        <div class="text">Anniemouse</div>
+                        <p>The company itself is a very successful company.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- contact section start -->
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact We</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Get in Touch</div>
+                    <p>Hello, it's really a pain to be followed. The worthiest of these bodies were corrupted by flight. They do not know who is freed from the pains of the truth of life for us?</p>
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">Name</div>
+                                <div class="sub-title">FARHAN-MUH-TASIM</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="info">
+                                <div class="head">Address</div>
+                                <div class="sub-title">Bangladesh, CTG</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-envelope"></i>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">ffjisan804@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column right">
+                    <div class="text">Message We</div>
+                    <form action="#">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Name" required>
+                            </div>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" required>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <input type="text" placeholder="Subject" required>
+                        </div>
+                        <div class="field textarea">
+                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                        </div>
+                        <div class="button-area">
+                            <button type="submit">Send message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer section start -->
+    <footer>
+        <span>Created By <a href="https://github.com/Gtajisan">RXS</a> | <span class="far fa-copyright"></span> 2024 All rights reserved.</span>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
-<footer class="footer-distributed">
-    <div class="footer-right">
-        <a href="https://www.facebook.com/anbuinfosec3"><i class="fa fa-facebook"></i></a>
-        <a href="https://github.com/anbuinfosec"><i class="fa fa-github"></i></a>
-        <a href="/cdn-cgi/l/email-protection#85e4ebe7f0ecebe3eaf6e0e6c5e2e8e4ece9abe6eae8"><i class="fa fa-envelope"></i></a>
-        <a href="https://t.me/anbudevs"><i class="fa fa-telegram"></i></a>
-    </div>
-    <div class="footer-left">
-        <p class="footer-links">
-            <a href="/">Home</a>
-            |
-            <a href="docs">Documentation</a>
-            |
-            <a href="tools">Tools</a>
-        </p>
-        <p>anbuinfosec © 2023</p>
-     </div>
-</footer>
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></html>
+</html>
